--- a/_locales/zh/microbiti2cesp32-strings.json
+++ b/_locales/zh/microbiti2cesp32-strings.json
@@ -25,5 +25,5 @@
     "microbiti2cesp32.thingspeak3|block": "連線到Thingspeak Channel ID %key | 讀取 %value1 資料",
     "microbiti2cesp32.thingspeak4|block": "連線到Thingspeak key %key | 寫入 Fields value | Field1 value %value1 || Field2 value %value2 Field3 value %value3 Field4 value %value4 Field5 value %value5 Field6 value %value6 Field7 value %value7",
     "microbiti2cesp32.http_command|block": "取得HTTP COMMAND",
-    "microbiti2cesp32.http_command1|block": "網頁顯示microbit資料"
+    "microbiti2cesp32.http_command1|block": "網頁顯示microbit資料 %"
 }
