--- a/_locales/zh/microbiti2cesp32-strings.json
+++ b/_locales/zh/microbiti2cesp32-strings.json
@@ -11,6 +11,7 @@
     "microbiti2cesp32.subMqtt|block": "訂閱MQTT主題 %topic",
     "microbiti2cesp32.ReceiveMqttTopic|block": "接收MQTT的主題",
     "microbiti2cesp32.ReceiveMqttMessage|block": "接收MQTT的訊息",
+    "microbiti2cesp32.clearmqtt|block": "清除MQTT暫存的訊息與主題",
     "microbiti2cesp32.linetoken|block": "設定Line Notify的token為 %token",
     "microbiti2cesp32.googler|block": "取得google試算表 id %googleid 行 %googlerow 列 %googlecol",
     "microbiti2cesp32.google2|block": "設定google表單url為 %google_url",
