--- a/_locales/zh/microbiti2cesp32-strings.json
+++ b/_locales/zh/microbiti2cesp32-strings.json
@@ -11,7 +11,6 @@
     "microbiti2cesp32.subMqtt|block": "訂閱MQTT主題 %topic",
     "microbiti2cesp32.ReceiveMqttTopic|block": "接收MQTT的主題",
     "microbiti2cesp32.ReceiveMqttMessage|block": "接收MQTT的訊息",
-    "microbiti2cesp32.clearmqtt|block": "清除MQTT暫存的訊息與主題",
     "microbiti2cesp32.linetoken|block": "設定Line Notify的token為 %token",
     "microbiti2cesp32.googler|block": "取得google試算表 id %googleid 行 %googlerow 列 %googlecol",
     "microbiti2cesp32.google2|block": "設定google表單url為 %google_url",
@@ -26,5 +25,6 @@
     "microbiti2cesp32.thingspeak3|block": "連線到Thingspeak Channel ID %key | 讀取 %value1 資料",
     "microbiti2cesp32.thingspeak4|block": "連線到Thingspeak key %key | 寫入 Fields value | Field1 value %value1 || Field2 value %value2 Field3 value %value3 Field4 value %value4 Field5 value %value5 Field6 value %value6 Field7 value %value7",
     "microbiti2cesp32.http_command|block": "取得HTTP COMMAND",
-    "microbiti2cesp32.http_command1|block": "網頁顯示microbit資料 %data"
+    "microbiti2cesp32.http_command1|block": "網頁顯示microbit資料 %data",
+    "microbiti2cesp32.clearmqtt|block": "清除MQTT暫存的訊息與主題"
 }
